[package]
name = "macvtap"
version = "0.1.2"
authors = ["fengjian <fengjianxinghun@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "macvtap/tap dev read/write"
repository = "https://github.com/fengjian/macvtap-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies.cc]
version = "1.0.52"

[dependencies]
libc = "0.2.69"



[profile.release]
opt-level = 'z'  # Optimize for size
lto = true
codegen-units = 1
panic = 'abort'
